Issue 862 - Fix Cellular Imaging page issues (#941)
* Add "strong" style for cards
* Add molecules background
* Enable top background-grey
* Fix customization and automation columns
* Prevent overlay background-color from being overwritten
* Select based on video-wrapper instead of "even"
* Add no-padding-bottom logic to avoid too much padding between sections that we want together
* Change "product-titles" and "blue-title" to apply to cellular imaging systems page

--- a/blocks/image-gallery/image-gallery.css
+++ b/blocks/image-gallery/image-gallery.css
@@ -1,4 +1,4 @@
-.image-gallery-container.overlay {
+.section.image-gallery-container.overlay {
   position: fixed;
   top: 0;
   left: 0;
